' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Anwendungskern

interface Promise<T>

package @nestjs/common {
  class "@Injectable" as Injectable
  hide Injectable circle
}

package haus {
  package entity {
    class Haus
  }

  package service #DDDDDD {
    class QueryBuilder

    class HausReadService << control >> <<@Injectable()>> {
      + async findById(params: FindByIdParams): Promise<Haus>
      + async find(suchkriterien?: Suchkriterien): Promise<Haus[]>
    }

    HausReadService o--> "1" QueryBuilder: queryBuilder
    HausReadService .up.> Injectable
    HausReadService .up.> Promise
    HausReadService ..> Haus

    QueryBuilder .[hidden].> Haus
  }
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
